--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services: 
   frontend:
-    build: ./Frontend_bd
+    build: ./Frontend_BD
     container_name: frontend
     ports: 
       - "5173:5173"
@@ -11,10 +11,10 @@ services:
     restart: always
   
   backend:
-    build: ./Backend_bd
+    build: ./Backend_BD
     container_name: backend
     ports: 
-      - "5000:5000" # puerto_host:puerto_contenedor
+      - "5000:5000"
     depends_on:
       - db
     environment:
@@ -28,10 +28,13 @@ services:
       DB_FUNC_PASSWORD: funcionario_pass
       DB_PART_USER: ucurooms_participante
       DB_PART_PASSWORD: participante_pass
+      DB_LOGIN: ucurooms_login
+      DB_LOGIN_PASSWORD: login_pass
       SECRET_KEY: super_clave_ultra_secreta_que_no_se_comparta
-
+      LANG: C.UTF-8
+      LC_ALL: C.UTF-8
+      PYTHONIOENCODING: utf-8
     command: flask run --host=0.0.0.0 --debug
-
     networks:
       - Ciruela
     restart: always
@@ -43,13 +46,17 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
       MYSQL_DATABASE: Obligatorio
+    command:
+      [
+        "--character-set-server=utf8mb4",
+        "--collation-server=utf8mb4_unicode_ci"
+      ]
     ports:
       - "3307:3306"
     networks:
       - Ciruela
-    volumes: # Monta la carpeta local en esto, con la condición de que sean .sql y se ejecuta una vez al crear la base de datos
+    volumes:
       - ./db:/docker-entrypoint-initdb.d:ro 
 
-
 networks:
-  Ciruela: 
+  Ciruela:
