--- a/Frontend_BD/package.json
+++ b/Frontend_BD/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@canvasjs/react-charts": "^1.0.2",
     "@tailwindcss/vite": "^4.1.15",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
